--- a/ejercicios02/Ejemplo-Pandas-01-BD.ipynb
+++ b/ejercicios02/Ejemplo-Pandas-01-BD.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -152,7 +152,7 @@
        "[347 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "[275 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "[347 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "[3503 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "24       25               Opera"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Se necesita que en el  dataframe tracks se presente el nombre del género\n",
+    "respaldoTracks = tracks.merge(genero, on=\"GenreId\")\n",
+    "respaldoTracks.to_csv(\"base/tracksName.csv\")\n",
+    "\n",
+    "# exportar el dataframe tracks a un csv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -973,143 +986,48 @@
        "      <td>0.99</td>\n",
        "      <td>Rock</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3498</th>\n",
-       "      <td>3499</td>\n",
-       "      <td>Pini Di Roma (Pinien Von Rom) \\ I Pini Della V...</td>\n",
-       "      <td>343</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>None</td>\n",
-       "      <td>286741</td>\n",
-       "      <td>4718950</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>Classical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3499</th>\n",
-       "      <td>3500</td>\n",
-       "      <td>String Quartet No. 12 in C Minor, D. 703 \"Quar...</td>\n",
-       "      <td>344</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Franz Schubert</td>\n",
-       "      <td>139200</td>\n",
-       "      <td>2283131</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>Classical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3500</th>\n",
-       "      <td>3501</td>\n",
-       "      <td>L'orfeo, Act 3, Sinfonia (Orchestra)</td>\n",
-       "      <td>345</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Claudio Monteverdi</td>\n",
-       "      <td>66639</td>\n",
-       "      <td>1189062</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>Classical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3501</th>\n",
-       "      <td>3502</td>\n",
-       "      <td>Quintet for Horn, Violin, 2 Violas, and Cello ...</td>\n",
-       "      <td>346</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Wolfgang Amadeus Mozart</td>\n",
-       "      <td>221331</td>\n",
-       "      <td>3665114</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>Classical</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3502</th>\n",
-       "      <td>3451</td>\n",
-       "      <td>Die Zauberflöte, K.620: \"Der Hölle Rache Kocht...</td>\n",
-       "      <td>317</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>Wolfgang Amadeus Mozart</td>\n",
-       "      <td>174813</td>\n",
-       "      <td>2861468</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>Opera</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3503 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      TrackId                                             Name_x  AlbumId  \\\n",
-       "0           1            For Those About To Rock (We Salute You)        1   \n",
-       "1           2                                  Balls to the Wall        2   \n",
-       "2           3                                    Fast As a Shark        3   \n",
-       "3           4                                  Restless and Wild        3   \n",
-       "4           5                               Princess of the Dawn        3   \n",
-       "...       ...                                                ...      ...   \n",
-       "3498     3499  Pini Di Roma (Pinien Von Rom) \\ I Pini Della V...      343   \n",
-       "3499     3500  String Quartet No. 12 in C Minor, D. 703 \"Quar...      344   \n",
-       "3500     3501               L'orfeo, Act 3, Sinfonia (Orchestra)      345   \n",
-       "3501     3502  Quintet for Horn, Violin, 2 Violas, and Cello ...      346   \n",
-       "3502     3451  Die Zauberflöte, K.620: \"Der Hölle Rache Kocht...      317   \n",
+       "   TrackId                                   Name_x  AlbumId  MediaTypeId  \\\n",
+       "0        1  For Those About To Rock (We Salute You)        1            1   \n",
+       "1        2                        Balls to the Wall        2            2   \n",
+       "2        3                          Fast As a Shark        3            2   \n",
+       "3        4                        Restless and Wild        3            2   \n",
+       "4        5                     Princess of the Dawn        3            2   \n",
        "\n",
-       "      MediaTypeId  GenreId                                           Composer  \\\n",
-       "0               1        1          Angus Young, Malcolm Young, Brian Johnson   \n",
-       "1               2        1                                               None   \n",
-       "2               2        1  F. Baltes, S. Kaufman, U. Dirkscneider & W. Ho...   \n",
-       "3               2        1  F. Baltes, R.A. Smith-Diesel, S. Kaufman, U. D...   \n",
-       "4               2        1                         Deaffy & R.A. Smith-Diesel   \n",
-       "...           ...      ...                                                ...   \n",
-       "3498            2       24                                               None   \n",
-       "3499            2       24                                     Franz Schubert   \n",
-       "3500            2       24                                 Claudio Monteverdi   \n",
-       "3501            2       24                            Wolfgang Amadeus Mozart   \n",
-       "3502            2       25                            Wolfgang Amadeus Mozart   \n",
+       "   GenreId                                           Composer  Milliseconds  \\\n",
+       "0        1          Angus Young, Malcolm Young, Brian Johnson        343719   \n",
+       "1        1                                               None        342562   \n",
+       "2        1  F. Baltes, S. Kaufman, U. Dirkscneider & W. Ho...        230619   \n",
+       "3        1  F. Baltes, R.A. Smith-Diesel, S. Kaufman, U. D...        252051   \n",
+       "4        1                         Deaffy & R.A. Smith-Diesel        375418   \n",
        "\n",
-       "      Milliseconds     Bytes  UnitPrice     Name_y  \n",
-       "0           343719  11170334       0.99       Rock  \n",
-       "1           342562   5510424       0.99       Rock  \n",
-       "2           230619   3990994       0.99       Rock  \n",
-       "3           252051   4331779       0.99       Rock  \n",
-       "4           375418   6290521       0.99       Rock  \n",
-       "...            ...       ...        ...        ...  \n",
-       "3498        286741   4718950       0.99  Classical  \n",
-       "3499        139200   2283131       0.99  Classical  \n",
-       "3500         66639   1189062       0.99  Classical  \n",
-       "3501        221331   3665114       0.99  Classical  \n",
-       "3502        174813   2861468       0.99      Opera  \n",
-       "\n",
-       "[3503 rows x 10 columns]"
+       "      Bytes  UnitPrice Name_y  \n",
+       "0  11170334       0.99   Rock  \n",
+       "1   5510424       0.99   Rock  \n",
+       "2   3990994       0.99   Rock  \n",
+       "3   4331779       0.99   Rock  \n",
+       "4   6290521       0.99   Rock  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Se necesita que en el  dataframe tracks se presente el nombre del género\n",
-    "# tracks.merge(genero, on=\"GenreId\")\n",
-    "\n",
-    "# exportar el dataframe tracks a un csv\n"
+    "respaldoTracks.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1128,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
